fix(noel): hide cursor on mobile and rm extra height on mobile

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -24,7 +24,7 @@ body {
   font-weight: $weight-regular;
   @include rem(font-size, $font-size-root);
   transition: all ease 0.64s;
-  cursor: none;
+  cursor: none !important;
 }
 
 body {
